# OptiRAG

./: .env.example  .gitignore  README.md  pyproject.toml
experiments/: fiqa_stage1.yaml
src/optirag/: __init__.py
src/optirag/adapters/gemini/: __init__.py  chat.py  embedder.py
src/optirag/adapters/pinecone/: __init__.py  store.py
src/optirag/agents/stage2/: __init__.py  graph.py  tools.py
src/optirag/cli/: data_cmd.py  eval_cmd.py  index_cmd.py  main.py  prompt_opt_cmd.py  tune_cmd.py
src/optirag/config/: __init__.py  embedding_registry.py  experiment.py  metric_normalize.py  settings.py
src/optirag/domain/: errors.py  types.py
src/optirag/eval/: __init__.py  dataset.py  metrics.py  qrel_protocol.py  runner.py
src/optirag/indexing/: __init__.py  pinecone_lifecycle.py
src/optirag/optimization/: __init__.py  objective.py  search_space.py  study.py  trial_params.py
src/optirag/ports/: embedder.py  llm.py  retriever.py
src/optirag/preprocessing/: __init__.py  chunking.py  text.py
src/optirag/rag/: __init__.py  frozen_stage1.py  pipeline.py
tests/integration/: test_index_build_smoke.py  test_smoke_placeholder.py
tests/unit/: test_chunking.py  test_gemini_embedder.py  test_indexing_keys.py  test_indexing_resume.py  test_metric_normalize.py  test_metrics.py
